--- a/index.html
+++ b/index.html
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tutor</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css" integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV" crossorigin="anonymous">
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@19.0.0-rc.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0-rc.0/client",
-    "react-router-dom": "https://esm.sh/react-router-dom@6",
-    "@google/genai": "https://esm.sh/@google/genai@^1.0.1",
-    "react-dom": "https://esm.sh/react-dom@^19.1.0",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
-  }
-}
-</script>
-</head>
-<!-- Google tag (gtag.js) -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tutor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"
+      integrity="sha384-n8MVd4RsNIU0tAv4ct0nTaAbDJwPJzDEaqSD1odI+WdtXRGWt2kTvGFasHpSy3SV"
+      crossorigin="anonymous"
+    />
+    <script type="importmap">
+      {
+        "imports": {
+          "react": "https://esm.sh/react@19.0.0-rc.0",
+          "react-dom/client": "https://esm.sh/react-dom@19.0.0-rc.0/client",
+          "react-router-dom": "https://esm.sh/react-router-dom@6",
+          "@google/genai": "https://esm.sh/@google/genai@^1.0.1",
+          "react-dom": "https://esm.sh/react-dom@^19.1.0",
+          "react/": "https://esm.sh/react@^19.1.0/",
+          "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
+        }
+      }
+    </script>
+  </head>
+  <!-- Google tag (gtag.js)
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKL5P19X50"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-RKL5P19X50');
-</script>
-<body class="bg-neutral-bg text-text-secondary antialiased font-sans">
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
+</script> -->
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-5ZV7QZ6B20"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-5ZV7QZ6B20");
+  </script>
+  <body class="bg-neutral-bg text-text-secondary antialiased font-sans">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
